--- a/ui/design/hifi-desktop-maintain.html
+++ b/ui/design/hifi-desktop-maintain.html
@@ -3,54 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>XJJ Housekeeper · 高保真（维护 · 桌面 1440×900）</title>
+    <title>XJJ Housekeeper · 高保真（维护 · 桌面 1440×900 · 左侧菜单）</title>
     <style>
-      :root {
-        --bg: #f7f9fc; --panel: #ffffff; --text: #1f2937; --muted: #6b7280;
-        --border: #e5e7eb; --accent: #2563eb; --accent-soft: #e6f0ff;
-      }
-      * { box-sizing: border-box; }
-      html, body { height: 100%; }
-      body { margin: 0; background: var(--bg); color: var(--text); font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif; display: grid; place-items: center; padding: 24px; }
-      .device-frame { width: 1440px; height: 900px; background: var(--panel); border: 1px solid var(--border); border-radius: 16px; overflow: hidden; box-shadow: 0 20px 50px rgba(31,41,55,.1); display: flex; flex-direction: column; }
-      .topbar { display: flex; align-items: center; justify-content: space-between; padding: 12px 20px; background: var(--panel); border-bottom: 1px solid var(--border); }
-      .brand { font-weight: 600; }
-      .nav .pill { border: 1px solid var(--border); background: #fff; color: var(--text); border-radius: 999px; padding: 6px 12px; }
-      .container { max-width: 1000px; margin: 20px auto; padding: 0 24px; width: 100%; }
-      .card { background: var(--panel); border: 1px solid var(--border); border-radius: 12px; padding: 16px; box-shadow: 0 10px 30px rgba(31,41,55,.06); }
-      h1 { font-size: 22px; margin: 0 0 8px; }
-      /* 依原型的表单行间距与元素间隙 */
-      .form-row { display: flex; gap: 8px; align-items: center; margin: 10px 0; }
-      .form-row input[type="text"] { flex: 1; padding: 9px 10px; border: 1px solid var(--border); border-radius: 8px; background: #fff; }
-      .desc { color: var(--muted); font-size: 14px; margin: 6px 0 10px; }
-      .tasks { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin: 12px 0; }
-      .task { border: 1px solid var(--border); border-radius: 8px; padding: 10px; background: #fff; }
-      .task h3 { font-size: 15px; margin: 0 0 6px; }
-      .task p { font-size: 13px; color: var(--muted); margin: 0; }
-      .actions { display: flex; gap: 8px; margin-top: 14px; }
-      .btn { border: 1px solid var(--border); background: #fff; color: var(--text); border-radius: 8px; padding: 8px 12px; }
-      .btn-primary { border-color: var(--accent); background: var(--accent-soft); }
-      .footer { text-align: center; color: var(--muted); font-size: 12px; margin: 12px 0 0; }
+      :root { --bg:#f7f9fc; --panel:#ffffff; --text:#111827; --muted:#6b7280; --border:#e5e7eb; --sidebar:#f3f4f6; --menu:#ffffff; --menu-active:#eef2f7; }
+      *{box-sizing:border-box} html,body{height:100%}
+      body{margin:0;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;display:grid;place-items:center;padding:24px}
+      .device-frame{width:1440px;height:900px;background:var(--panel);border:1px solid var(--border);border-radius:16px;overflow:hidden;box-shadow:0 20px 50px rgba(31,41,55,.1);display:flex;flex-direction:column}
+      .topbar{display:flex;align-items:center;justify-content:space-between;padding:12px 20px;background:var(--panel);border-bottom:1px solid var(--border)}
+      .brand{font-weight:600}
+      .layout{display:flex;flex:1;min-height:0}
+      .sidebar{width:240px;background:var(--sidebar);border-right:1px solid var(--border);padding:16px 12px}
+      .menu{display:flex;flex-direction:column;gap:6px}
+      .menu .item{display:block;width:100%;text-align:left;background:var(--menu);color:var(--text);border:1px solid var(--border);border-radius:12px;padding:14px 16px;font-size:16px;line-height:1.1;cursor:default}
+      .menu .item:hover{background:#fafafa}
+      .menu .item:active{background:#f0f2f5}
+      .menu .item.active{background:var(--menu-active);border-color:#cbd5e1;font-weight:600}
+      .content{flex:1;display:block;overflow:auto;padding:20px 24px}
+      .card{background:var(--panel);border:1px solid var(--border);border-radius:12px;padding:16px;box-shadow:0 10px 30px rgba(31,41,55,.06)}
+      h1{font-size:22px;margin:0 0 8px}
+      .form-row{display:flex;gap:8px;align-items:center;margin:10px 0}
+      .form-row input[type="text"]{flex:1;padding:9px 10px;border:1px solid var(--border);border-radius:8px;background:#fff}
+      .btn{border:1px solid var(--border);background:#fff;color:var(--text);border-radius:8px;padding:8px 12px}
+      .btn-primary{border-color:#94a3b8;background:#f1f5f9}
+      .footer{text-align:center;color:var(--muted);font-size:12px;margin:12px 0 0}
     </style>
   </head>
   <body>
     <div class="device-frame">
       <header class="topbar">
         <div class="brand">XJJ Housekeeper</div>
-        <nav class="nav"><button class="pill">返回查询</button></nav>
       </header>
-      <main class="container">
-        <section class="page visible">
-          <div class="card">
-            <h1>维护视频数据</h1>
-            <div class="form-row"><input type="text" placeholder="扫描目录路径，例如：/Volumes/Media/videos" /><button class="btn">选择目录</button></div>
-            <div class="form-row"><input type="text" placeholder="标签（可选），例如：电影, 高清" /></div>
-            <div class="form-row" style="display:none;"><input type="text" placeholder="逻辑路径（可选），例如：媒体库/电影/2024" /></div>
-            <div class="form-row"><button class="btn btn-primary">开始维护</button></div>
-          </div>
-        </section>
-        <p class="footer">高保真示意 · 维护流程 · 桌面 1440×900</p>
-      </main>
+      <div class="layout">
+        <aside class="sidebar" aria-label="侧边菜单">
+          <nav class="menu">
+            <button class="item">查询</button>
+            <button class="item active">维护</button>
+          </nav>
+        </aside>
+        <main class="content">
+          <section class="page visible">
+            <div class="card">
+              <h1>维护视频数据</h1>
+              <div class="form-row"><input type="text" placeholder="扫描目录路径，例如：/Volumes/Media/videos" /><button class="btn">选择目录</button></div>
+              <div class="form-row"><input type="text" placeholder="标签（可选），例如：电影, 高清" /></div>
+              <div class="form-row" style="display:none"><input type="text" placeholder="逻辑路径（可选），例如：媒体库/电影/2024" /></div>
+              <div class="form-row"><button class="btn btn-primary">开始维护</button></div>
+            </div>
+            <p class="footer">高保真示意 · 桌面 1440×900 · 左侧素雅菜单</p>
+          </section>
+        </main>
+      </div>
     </div>
   </body>
   </html>
