--- a/ui/design/hifi-desktop.html
+++ b/ui/design/hifi-desktop.html
@@ -3,93 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>XJJ Housekeeper · 高保真（桌面 1440×900）</title>
+    <title>XJJ Housekeeper · 高保真（查询 · 桌面 1440×900 · 左侧菜单）</title>
     <style>
       :root {
-        --bg: #f7f9fc;
-        --panel: #ffffff;
-        --text: #1f2937;
-        --muted: #6b7280;
-        --border: #e5e7eb;
-        --accent: #2563eb;
-        --accent-hover: #1e40af;
-        --accent-soft: #e6f0ff;
+        --bg:#f7f9fc; --panel:#ffffff; --text:#111827; --muted:#6b7280;
+        --border:#e5e7eb; --sidebar:#f3f4f6; --menu:#ffffff; --menu-active:#eef2f7;
       }
-      * { box-sizing: border-box; }
-      html, body { height: 100%; }
-      body {
-        margin: 0; background: var(--bg); color: var(--text);
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-        display: grid; place-items: center; padding: 24px;
-      }
-      .device-frame {
-        width: 1440px; height: 900px; background: var(--panel);
-        border: 1px solid var(--border); border-radius: 16px;
-        overflow: hidden; box-shadow: 0 20px 50px rgba(31,41,55,.1);
-        display: flex; flex-direction: column;
-      }
-      .topbar {
-        display: flex; align-items: center; justify-content: space-between;
-        padding: 12px 20px; background: var(--panel); border-bottom: 1px solid var(--border);
-      }
-      .brand { font-weight: 600; }
-      .nav { display: flex; gap: 8px; }
-      .nav .pill { border: 1px solid var(--border); background: #fff; color: var(--text); border-radius: 999px; padding: 6px 12px; cursor: default; }
-      .container { max-width: 1000px; margin: 20px auto; padding: 0 24px; width: 100%; }
-      .card { background: var(--panel); border: 1px solid var(--border); border-radius: 12px; padding: 16px; box-shadow: 0 10px 30px rgba(31,41,55,.06); }
-      h1 { font-size: 22px; margin: 0 0 8px; }
-      .form-row { display: flex; gap: 8px; align-items: center; margin: 10px 0; }
-      .form-row input[type="text"] { flex: 1; padding: 9px 10px; border: 1px solid var(--border); border-radius: 8px; background: #fff; }
-      .btn { border: 1px solid var(--border); background: #fff; color: var(--text); border-radius: 8px; padding: 8px 12px; }
-      .btn-primary { border-color: var(--accent); background: var(--accent-soft); }
-      .table-wrap { border: 1px solid var(--border); border-radius: 8px; overflow: hidden; }
-      table { width: 100%; border-collapse: collapse; font-size: 14px; }
-      thead { background: #f3f4f6; }
-      th, td { text-align: left; padding: 10px 12px; border-bottom: 1px solid var(--border); }
-      /* 数据列策略：视频/大小不换行，路径允许换行 */
-      td:nth-child(1), td:nth-child(2) { white-space: nowrap; }
-      td:nth-child(3) { word-break: break-all; white-space: normal; }
-      tbody tr:nth-child(odd) { background: #fafafa; }
-      .help { color: var(--muted); font-size: 12px; margin: 4px 2px; }
-      .footer { text-align: center; color: var(--muted); font-size: 12px; margin: 12px 0 0; }
+      *{box-sizing:border-box}
+      html,body{height:100%}
+      body{margin:0;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;display:grid;place-items:center;padding:24px}
+      .device-frame{width:1440px;height:900px;background:var(--panel);border:1px solid var(--border);border-radius:16px;overflow:hidden;box-shadow:0 20px 50px rgba(31,41,55,.1);display:flex;flex-direction:column}
+      .topbar{display:flex;align-items:center;justify-content:space-between;padding:12px 20px;background:var(--panel);border-bottom:1px solid var(--border)}
+      .brand{font-weight:600}
+      .layout{display:flex;flex:1;min-height:0}
+      .sidebar{width:240px;background:var(--sidebar);border-right:1px solid var(--border);padding:16px 12px}
+      .menu{display:flex;flex-direction:column;gap:6px}
+      .menu .item{display:block;width:100%;text-align:left;background:var(--menu);color:var(--text);border:1px solid var(--border);border-radius:12px;padding:14px 16px;font-size:16px;line-height:1.1;cursor:default;box-shadow:none}
+      .menu .item:hover{background:#fafafa}
+      .menu .item:active{background:#f0f2f5}
+      .menu .item.active{background:var(--menu-active);border-color:#cbd5e1;font-weight:600}
+      .content{flex:1;display:block;overflow:auto;padding:20px 24px}
+      .card{background:var(--panel);border:1px solid var(--border);border-radius:12px;padding:16px;box-shadow:0 10px 30px rgba(31,41,55,.06)}
+      h1{font-size:22px;margin:0 0 8px}
+      .form-row{display:flex;gap:8px;align-items:center;margin:10px 0}
+      .form-row input[type="text"]{flex:1;padding:9px 10px;border:1px solid var(--border);border-radius:8px;background:#fff}
+      .btn{border:1px solid var(--border);background:#fff;color:var(--text);border-radius:8px;padding:8px 12px}
+      .btn-primary{border-color:#94a3b8;background:#f1f5f9}
+      .table-wrap{border:1px solid var(--border);border-radius:8px;overflow:hidden}
+      table{width:100%;border-collapse:collapse;font-size:14px}
+      thead{background:#f3f4f6}
+      th,td{text-align:left;padding:10px 12px;border-bottom:1px solid var(--border)}
+      td:nth-child(1),td:nth-child(2){white-space:nowrap}
+      td:nth-child(3){word-break:break-all;white-space:normal}
+      .footer{text-align:center;color:var(--muted);font-size:12px;margin:12px 0 0}
     </style>
   </head>
   <body>
     <div class="device-frame">
       <header class="topbar">
         <div class="brand">XJJ Housekeeper</div>
-        <nav class="nav">
-          <button class="pill">维护视频数据</button>
-        </nav>
       </header>
-      <main class="container">
-        <section class="page visible">
-          <div class="card">
-            <h1>查询视频</h1>
-            <div class="form-row">
-              <input type="text" value="ABC-123" placeholder="请输入完整视频编号，如 ABC-123" />
-              <button class="btn btn-primary">查询</button>
+      <div class="layout">
+        <aside class="sidebar" aria-label="侧边菜单">
+          <nav class="menu">
+            <button class="item active">查询</button>
+            <button class="item">维护</button>
+          </nav>
+        </aside>
+        <main class="content">
+          <section class="page visible">
+            <div class="card">
+              <h1>查询视频</h1>
+              <div class="form-row">
+                <input type="text" value="ABC-123" placeholder="请输入完整视频编号，如 ABC-123" />
+                <button class="btn btn-primary">查询</button>
+              </div>
+              <p style="color:#6b7280;font-size:12px;margin:4px 2px">仅支持精确匹配；不支持空查询与模糊查询。</p>
+              <div class="table-wrap">
+                <table>
+                  <thead><tr><th>视频</th><th>大小</th><th>路径</th></tr></thead>
+                  <tbody>
+                    <tr><td>ABC-123</td><td>5.55G</td><td>/Volumes/Media/videos/ABC-123.mp4</td></tr>
+                    <tr><td>DEF-456</td><td>2.62G</td><td>/Volumes/Media/videos/DEF-456.mkv</td></tr>
+                    <tr><td>GHI-789</td><td>3.14G</td><td>/Volumes/Media/videos/GHI-789.mp4</td></tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
-            <p class="help">仅支持精确匹配；不支持空查询与模糊查询。</p>
-            <div class="table-wrap">
-              <table>
-                <thead>
-                  <tr><th>视频</th><th>大小</th><th>路径</th></tr>
-                </thead>
-                <tbody>
-                  <tr><td>ABC-123</td><td>5.55G</td><td>/Volumes/Media/videos/ABC-123.mp4</td></tr>
-                  <tr><td>DEF-456</td><td>2.62G</td><td>/Volumes/Media/videos/DEF-456.mkv</td></tr>
-                  <tr><td>GHI-789</td><td>3.14G</td><td>/Volumes/Media/videos/GHI-789.mp4</td></tr>
-                  <tr><td>JKL-001</td><td>1.08G</td><td>/Volumes/Media/videos/JKL-001.avi</td></tr>
-                  <tr><td>MNO-777</td><td>7.01G</td><td>/Volumes/Media/videos/MNO-777.mp4</td></tr>
-                  <tr><td>PQR-888</td><td>4.25G</td><td>/Volumes/Media/videos/PQR-888.mp4</td></tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </section>
-        <p class="footer">高保真示意 · 桌面 1440×900 · 颜色：白/浅灰/淡蓝</p>
-      </main>
+            <p class="footer">高保真示意 · 桌面 1440×900 · 左侧素雅菜单</p>
+          </section>
+        </main>
+      </div>
     </div>
   </body>
   </html>
